[workspace]
resolver = "2"
members = [
    "cargo-difftests",
    "cargo-difftests-core",
    "cargo-difftests-testclient",
    "sample/cargo-difftests-sample-project",
]

[workspace.dependencies]
cargo-difftests = { path = "cargo-difftests", version = "0.4.0" }
cargo-difftests-core = { path = "cargo-difftests-core", version = "0.4.0" }
cargo-difftests-testclient = { path = "cargo-difftests-testclient", version = "0.4.0" }

anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive", "string"] }
git2 = "0.18"
home = "0.5.4"
indoc = "2"
libc = "0.2"
libgit2-sys = "0.16.1"
log = "0.4.17"
path-absolutize = "3.0.14"
path-slash = "0.2.1"
pretty_env_logger = "0.5.0"
proc-macro2 = "1.0.47"
prodash = { version = "28.0.0", default-features = false, features = [
    "render-line",
    "render-line-crossterm",
    "render-line-autoconfigure",
    "progress-tree",
] }
quote = "1.0.21"
rustc-demangle = "0.1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
thiserror = "1.0"
