[package]
name = "cargo-difftests-core"
version = "0.4.0"
edition = "2021"
description = "cargo-difftests: core library"
license = "Apache-2.0"
repository = "https://github.com/dnbln/cargo-difftests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
groups = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
