[package]
name = "cargo-difftests-core"
description = "cargo-difftests: core library"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
groups = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
