[package]
name = "cargo-difftests-testclient"
description = "cargo-difftests: test client library"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["enforce-single-running-test", "groups", "parallel-groups"]
enforce-single-running-test = []
groups = ["enforce-single-running-test", "cargo-difftests-core/groups"]
parallel-groups = ["groups"]
compile-index-and-clean = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-difftests-core.workspace = true
libc.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
