[package]
name = "cargo-difftests"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cargo-difftests-core/groups"]

[dependencies]
anyhow.workspace = true
cargo-difftests-core.workspace = true
chrono.workspace = true
clap.workspace = true
git2.workspace = true
home.workspace = true
indoc.workspace = true
log.workspace = true
path-absolutize.workspace = true
path-slash.workspace = true
pretty_env_logger.workspace = true
prodash.workspace = true
rustc-demangle.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[[bin]]
name = "rustc-wrapper-difftests"
path = "src/bin/rustc-wrapper-difftests.rs"

[[bin]]
name = "rustc-wrapper-difftests-workspace"
path = "src/bin/rustc-wrapper-difftests-workspace.rs"

[[bin]]
name = "cargo-difftests-default-rerunner"
path = "src/bin/cargo-difftests-default-rerunner.rs"
