[package]
name = "rustc-wrapper-difftests"
version = "0.4.0"
edition = "2021"
description = "cargo-difftests: rustc wrapper"
license = "Apache-2.0"
repository = "https://github.com/dnbln/cargo-difftests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
