[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
{% if internal %}
cargo-difftests-testclient.workspace = true
serde.workspace = true
{% else %}
cargo-difftests-testclient = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
{% endif %}
