[package]
name = "cargo-difftests-sample-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "cargo-difftests-testclient/parallel-groups",
    "cargo-difftests-testclient/compile-index-and-clean",
]

[dependencies]

[dev-dependencies]
cargo-difftests-testclient.workspace = true
serde.workspace = true
